--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 .footer{
   position: absolute;
