--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,16 @@
   opacity: 0.9;
   
 }
+.formValues{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  /* border: 1px solid white; */
+}
+.formValues input{
+  height: 35px;
+}
+.formValues button{
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
